# cv-2015

./: .gitignore  CMakeLists.txt  README.md
cv_demo/: cv_demo.ino
src/: AppConfig.cpp  AppConfig.hpp  ArduinoController.cpp  ArduinoController.hpp  CMakeLists.txt  CmdLineInterface.cpp  CmdLineInterface.hpp  ElDetector.cpp  GUIManager.cpp  GUIManager.hpp  L.cpp  L.h  L.hpp  LDetector.cpp  LDetector.h  LDetector.hpp  LProcessor.cpp  LProcessor.h  LProcessor.hpp  Lawliet.cpp  Makefile  NetworkController.cpp  NetworkController.hpp  VideoDevice.cpp  VideoDevice.hpp  auto-format.sh  cv_2015.cpp  cv_a.cpp  cv_a1.cpp  cv_a2.cpp  cv_b.cpp  el_processor.cpp  lawliet.cpp  network_test.cpp  rs232.c  rs232.h
